--- a/data/uberchick-tree-view.in.ui
+++ b/data/uberchick-tree-view.in.ui
@@ -11,10 +11,12 @@
   </object>
   <object class="GtkTreeStore" id="uberchick_tree_view_tree_store">
     <columns>
-      <!-- column-name GUINT_TWEET_LIST_INDEX -->
+      <!-- column-name GUINT_UBERCHICK_TREE_VIEW_INDEX -->
       <column type="guint"/>
-      <!-- column-name GDOUBLE_TWEET_ID -->
+      <!-- column-name GDOUBLE_UPDATE_ID -->
       <column type="gdouble"/>
+      <!-- column-name GSTRING_UPDATE_ID_STR -->
+      <column type="gchararray"/>
       <!-- column-name GDOUBLE_USER_ID -->
       <column type="gdouble"/>
       <!-- column-name STRING_USER -->
@@ -63,11 +65,11 @@
     <property name="page_increment">10</property>
     <property name="page_size">10</property>
   </object>
-  <object class="GtkVBox" id="uberchick_tree_view_vbox">
+  <object class="GtkVBox" id="uberchick_tree_view_main_container_vbox">
     <property name="visible">True</property>
     <property name="orientation">vertical</property>
     <child>
-      <object class="GtkHBox" id="uberchick_tree_view_hbox">
+      <object class="GtkHBox" id="uberchick_tree_view_toolbar_handlebox_hbox">
         <property name="visible">True</property>
         <child>
           <object class="GtkHandleBox" id="uberchick_tree_view_handlebox">
@@ -75,6 +77,17 @@
             <child>
               <object class="GtkToolbar" id="uberchick_tree_view_toolbar">
                 <property name="visible">True</property>
+                <property name="show_arrow">False</property>
+                <child>
+                  <object class="GtkToggleToolButton" id="uberchick_tree_view_auto_refresh_toggle_tool_button">
+                    <property name="visible">True</property>
+                    <property name="use_underline">True</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="homogeneous">True</property>
+                  </packing>
+                </child>
                 <child>
                   <object class="GtkToolButton" id="uberchick_tree_view_refresh_tool_button">
                     <property name="visible">True</property>
@@ -101,7 +114,7 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkSeparatorToolItem" id="toolbutton2">
+                  <object class="GtkSeparatorToolItem" id="uberchick_tree_view_loading_progess_started_separator_tool_item">
                     <property name="visible">True</property>
                   </object>
                   <packing>
@@ -124,6 +137,15 @@
                   </object>
                   <packing>
                     <property name="expand">True</property>
+                    <property name="homogeneous">True</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkSeparatorToolItem" id="uberchick_tree_view_loading_progess_ended_separator_tool_item">
+                    <property name="visible">True</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
                     <property name="homogeneous">True</property>
                   </packing>
                 </child>
@@ -169,21 +191,12 @@
                   </object>
                   <packing>
                     <property name="expand">False</property>
-                  </packing>
-                </child>
-                <child>
-                  <object class="GtkSeparatorToolItem" id="toolbutton1">
-                    <property name="visible">True</property>
-                  </object>
-                  <packing>
-                    <property name="expand">False</property>
                     <property name="homogeneous">True</property>
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkToggleToolButton" id="uberchick_tree_view_stop_toggle_tool_button">
+                  <object class="GtkSeparatorToolItem" id="uberchick_tree_view_max_updates_separator_tool_item">
                     <property name="visible">True</property>
-                    <property name="use_underline">True</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -259,7 +272,7 @@
                     <property name="yalign">0</property>
                   </object>
                   <attributes>
-                    <attribute name="pixbuf">13</attribute>
+                    <attribute name="pixbuf">14</attribute>
                   </attributes>
                 </child>
               </object>
@@ -277,14 +290,14 @@
                   <object class="GtkCellRendererText" id="uberchick_tree_view_string_detailed_update_cell_renderer_text">
                     <property name="width">1</property>
                     <property name="height">1</property>
-                    <property name="ypad">5</property>
+                    <property name="xalign">0</property>
                     <property name="yalign">0</property>
                     <property name="editable">True</property>
                     <property name="wrap_mode">word</property>
                     <property name="wrap_width">200</property>
                   </object>
                   <attributes>
-                    <attribute name="markup">8</attribute>
+                    <attribute name="markup">9</attribute>
                   </attributes>
                 </child>
               </object>
@@ -302,13 +315,14 @@
                   <object class="GtkCellRendererText" id="uberchick_tree_view_string_update_cell_renderer_text">
                     <property name="width">1</property>
                     <property name="height">1</property>
+                    <property name="xalign">0</property>
                     <property name="yalign">0</property>
                     <property name="editable">True</property>
                     <property name="wrap_mode">word</property>
                     <property name="wrap_width">200</property>
                   </object>
                   <attributes>
-                    <attribute name="markup">6</attribute>
+                    <attribute name="markup">7</attribute>
                   </attributes>
                 </child>
               </object>
@@ -335,7 +349,7 @@
                     <property name="wrap_width">85</property>
                   </object>
                   <attributes>
-                    <attribute name="markup">15</attribute>
+                    <attribute name="markup">16</attribute>
                   </attributes>
                 </child>
               </object>
@@ -361,7 +375,7 @@
                     <property name="wrap_width">85</property>
                   </object>
                   <attributes>
-                    <attribute name="markup">16</attribute>
+                    <attribute name="markup">17</attribute>
                   </attributes>
                 </child>
               </object>
@@ -386,7 +400,7 @@
                     <property name="wrap_width">70</property>
                   </object>
                   <attributes>
-                    <attribute name="text">9</attribute>
+                    <attribute name="text">10</attribute>
                   </attributes>
                 </child>
               </object>
@@ -429,6 +443,15 @@
           </object>
           <packing>
             <property name="expand">False</property>
+            <property name="homogeneous">True</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkSeparatorToolItem" id="uberchick_tree_view_tab_toolbar_close_separator_tool_item">
+            <property name="visible">True</property>
+          </object>
+          <packing>
+            <property name="expand">False</property>
           </packing>
         </child>
         <child>
@@ -438,6 +461,15 @@
             <property name="label" translatable="yes">_Refresh</property>
             <property name="use_underline">True</property>
             <property name="stock_id">gtk-refresh</property>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="homogeneous">True</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkSeparatorToolItem" id="uberchick_tree_view_tab_toolbar_refresh_separator_tool_item">
+            <property name="visible">True</property>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -453,6 +485,7 @@
           </object>
           <packing>
             <property name="expand">False</property>
+            <property name="homogeneous">True</property>
           </packing>
         </child>
       </object>
